Editor board / Restore visibility of search results utilities. Diverging CSS. Fixes https://gitlab.ifremer.fr/sextant/geonetwork/-/issues/203

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_editor_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_editor_sextant.less
@@ -73,6 +73,14 @@
 }
 
 
+.gn-editor-board {
+  .gn-top-search {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+  }
+}
+
+
 form.gn-editor {
   // tabs above editor
   .nav {
